--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <title> Donuts culture in Canada</title>
-    <link href="../beautiful city CSS layout exercise folder/normalize.css" rel="stylesheet"/>
-    <link href="../beautiful city CSS layout exercise folder/donuts.css" rel="stylesheet"/>
+    <link href="stylesheet/normalize.css" rel="stylesheet"/>
+    <link href="stylesheet/index.css" rel="stylesheet"/>
 </head>
 <body>
 
